<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="115sp"
        android:background="#5fadc7"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_light"
            android:text="@string/aioma"
            android:textColor="#FFFFFF"
            android:textSize="68sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/merchant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/barlow_regular"
            android:text="@string/merchant"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintVertical_bias="0.26" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/welcome_to_AIOMA_merchant"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/barlow_regular"
        android:gravity="center_horizontal"
        android:text="@string/welcome_to_aioma_merchant"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintVertical_bias="0.10" />

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/barlow_regular"
        android:gravity="center_horizontal"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_to_AIOMA_merchant" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Sign_up_button"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:background="@drawable/button_style"
        android:backgroundTint="#5fadc7"
        android:fontFamily="@font/barlow_regular"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_message"
        app:layout_constraintVertical_bias="0.2"
        tools:ignore="MissingConstraints,UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Sign_in_button"
        android:layout_width="200sp"
        android:layout_height="60sp"
        android:background="@drawable/button_style"
        android:backgroundTint="#5B5B63"
        android:fontFamily="@font/barlow_regular"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sign_up_button"
        app:layout_constraintVertical_bias="0.1"
        tools:ignore="MissingConstraints,UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>